Moved reading game stats to StatsDescription

--- a/Codin/Codin.vcxproj
+++ b/Codin/Codin.vcxproj
@@ -148,10 +148,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="EntityDescription.cpp" />
+    <ClCompile Include="StatsDescription.cpp" />
     <ClCompile Include="Vector.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EntityDescription.h" />
+    <ClInclude Include="StatsDescription.h" />
     <ClInclude Include="Vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
