--- a/Codin/Codin.vcxproj
+++ b/Codin/Codin.vcxproj
@@ -148,12 +148,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="EntityDescription.cpp" />
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="StatsDescription.cpp" />
     <ClCompile Include="Vector.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EntityDescription.h" />
+    <ClInclude Include="Game.h" />
     <ClInclude Include="StatsDescription.h" />
+    <ClInclude Include="Utils.h" />
     <ClInclude Include="Vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
