--- a/Codin/Codin.vcxproj.filters
+++ b/Codin/Codin.vcxproj.filters
@@ -4,10 +4,13 @@
     <ClInclude Include="Vector.h" />
     <ClInclude Include="EntityDescription.h" />
     <ClInclude Include="StatsDescription.h" />
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="Utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Vector.cpp" />
     <ClCompile Include="EntityDescription.cpp" />
     <ClCompile Include="StatsDescription.cpp" />
+    <ClCompile Include="Game.cpp" />
   </ItemGroup>
 </Project>
