Implemented first behavior for Wood 2 League
Move to target position of the enemy closes to the base.

--- a/Codin/Codin.vcxproj
+++ b/Codin/Codin.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityDescription.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Rules.h" />
     <ClInclude Include="StatsDescription.h" />
     <ClInclude Include="Utils.h" />
     <ClInclude Include="Vector.h" />
