--- a/Codin/Codin.vcxproj
+++ b/Codin/Codin.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EntityDescription.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="PaladinController.cpp" />
     <ClCompile Include="PeasantController.cpp" />
     <ClCompile Include="StatsDescription.cpp" />
     <ClCompile Include="Vector.cpp" />
@@ -159,6 +160,7 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityDescription.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="PaladinController.h" />
     <ClInclude Include="PeasantController.h" />
     <ClInclude Include="Rules.h" />
     <ClInclude Include="StatsDescription.h" />
