Implemented Idle behavior for Paladin
Try to guard standing in front of the base, in the distance to other heroes.

--- a/Codin/Codin.vcxproj
+++ b/Codin/Codin.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityDescription.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Math.h" />
     <ClInclude Include="PaladinController.h" />
     <ClInclude Include="PeasantController.h" />
     <ClInclude Include="Rules.h" />
