--- a/Codin/Codin.vcxproj.filters
+++ b/Codin/Codin.vcxproj.filters
@@ -11,6 +11,7 @@
     <ClInclude Include="Rules.h" />
     <ClInclude Include="PeasantController.h" />
     <ClInclude Include="PaladinController.h" />
+    <ClInclude Include="Math.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Vector.cpp" />
