Refactor: Moved common parts for controllers to the basic class

--- a/Codin/Codin.vcxproj
+++ b/Codin/Codin.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Controller.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EntityDescription.cpp" />
     <ClCompile Include="Game.cpp" />
