Added FunctionTimer to measure function execution time

--- a/Codin/Codin.vcxproj
+++ b/Codin/Codin.vcxproj
@@ -168,6 +168,7 @@
     <ClInclude Include="Rules.h" />
     <ClInclude Include="Simulate.h" />
     <ClInclude Include="StatsDescription.h" />
+    <ClInclude Include="Timer.h" />
     <ClInclude Include="Utils.h" />
     <ClInclude Include="Vector.h" />
   </ItemGroup>
