--- a/Codin/Codin.vcxproj.filters
+++ b/Codin/Codin.vcxproj.filters
@@ -13,6 +13,7 @@
     <ClInclude Include="PaladinController.h" />
     <ClInclude Include="Math.h" />
     <ClInclude Include="Simulate.h" />
+    <ClInclude Include="Timer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Vector.cpp" />
