--- a/Codin/Codin.vcxproj
+++ b/Codin/Codin.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="PaladinController.cpp" />
     <ClCompile Include="PeasantController.cpp" />
+    <ClCompile Include="RogueController.cpp" />
     <ClCompile Include="Simulate.cpp" />
     <ClCompile Include="StatsDescription.cpp" />
     <ClCompile Include="Vector.cpp" />
@@ -165,6 +166,7 @@
     <ClInclude Include="Math.h" />
     <ClInclude Include="PaladinController.h" />
     <ClInclude Include="PeasantController.h" />
+    <ClInclude Include="RogueController.h" />
     <ClInclude Include="Rules.h" />
     <ClInclude Include="Simulate.h" />
     <ClInclude Include="StatsDescription.h" />
