--- a/Codin/Codin.vcxproj.filters
+++ b/Codin/Codin.vcxproj.filters
@@ -14,6 +14,7 @@
     <ClInclude Include="Math.h" />
     <ClInclude Include="Simulate.h" />
     <ClInclude Include="Timer.h" />
+    <ClInclude Include="RogueController.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Vector.cpp" />
@@ -25,5 +26,6 @@
     <ClCompile Include="PaladinController.cpp" />
     <ClCompile Include="Simulate.cpp" />
     <ClCompile Include="Controller.cpp" />
+    <ClCompile Include="RogueController.cpp" />
   </ItemGroup>
 </Project>
